[package]
name = "sp-ropey"
version = "0.2.0"
edition = "2018"
authors = ["Samuel Burnham <sam@yatima.io>", "John Burnham <john@yatima.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yatima-inc/sp-ropey"
documentation = "https://docs.rs/sp-ropey"
description = "Text rope for `no_std` use withing Substrate"
keywords = ["rope", "no_std"]
categories = ["no-std"]

[dependencies]
smallvec = "1"

[dev-dependencies]
rand = "0.7"
proptest = "0.9"
unicode-segmentation = "1.3"
